--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.15.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "crypto-js": "^3.1.9-1",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
